<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main_title"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#120D22"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_view"
        style="@style/title"
        android:text="@string/Trivia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tv_question_out_of"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/out_of_question"
        android:textColor="#FFFFFF"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_view" />
    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="183dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#1C172E"
        android:elevation="12dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_question_out_of">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/question_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_ques"
                android:text="@string/question_text"
                android:textColor="#FFFFFF"
                android:textSize="22sp" />
        </ScrollView>
    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/true_btn"
        style="@style/button_main"
        android:text="@string/true_button"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv" />
    <Button
        android:id="@+id/false_btn"
        style="@style/button_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/false_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/true_btn" />
    <Button
        android:id="@+id/nxt_btn"
        style="@style/button_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nxt_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.883"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/false_btn" />

    <TextView
        android:id="@+id/score_tv"
        style="@style/score"
        android:layout_marginStart="35dp"
        android:layout_marginTop="16dp"
        android:text="score: 0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_question_out_of"
        app:layout_constraintTop_toBottomOf="@+id/title_view" />

    <TextView
        android:id="@+id/highScoreTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:text="High Score: 0"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_question_out_of"
        app:layout_constraintTop_toBottomOf="@+id/score_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>
    </layout>